[gd_scene load_steps=2 format=2]

[ext_resource path="res://data/Scripts/MainMenu.gd" type="Script" id=1]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -141.0
margin_top = -277.0
margin_right = 141.0
grow_horizontal = 0
grow_vertical = 0
size_flags_vertical = 3
alignment = 1

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_top = 104.0
margin_right = 282.0
margin_bottom = 124.0
text = "Start"

[node name="OptionButton" type="Button" parent="VBoxContainer"]
margin_top = 128.0
margin_right = 282.0
margin_bottom = 148.0
text = "Option"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 152.0
margin_right = 282.0
margin_bottom = 172.0
text = "Quit"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionButton" to="." method="_on_OptionButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
